testing-tracing-opentelemetry/src/snapshots/testing_tracing_opentelemetry__empty_http_route_for_nonexisting_route.snap
---
source: testing-tracing-opentelemetry/src/lib.rs
expression: tracing_events
---
- fields:
    message: new
  level: TRACE
  span:
    http.request.method: GET
    name: HTTP request
    network.protocol.version: "1.1"
    otel.kind: Server
    otel.name: GET
    server.address: ""
    span.type: web
    url.path: /idontexist/123
    url.scheme: ""
    user_agent.original: ""
  spans: []
  target: "otel::tracing"
  timestamp: "[timestamp]"
- fields:
    message: close
    time.busy: "[duration]"
    time.idle: "[duration]"
  level: TRACE
  span:
    http.request.method: GET
    http.response.status_code: "404"
    http.route: ""
    name: HTTP request
    network.protocol.version: "1.1"
    otel.kind: Server
    otel.name: GET
    server.address: ""
    span.type: web
    url.path: /idontexist/123
    url.scheme: ""
    user_agent.original: ""
  spans: []
  target: "otel::tracing"
  timestamp: "[timestamp]"

