testing-tracing-opentelemetry/src/snapshots/testing_tracing_opentelemetry__filled_http_route_for_existing_route.snap
---
source: testing-tracing-opentelemetry/src/lib.rs
expression: tracing_events
snapshot_kind: text
---
- fields:
    message: new
  level: TRACE
  span:
    http.request.method: GET
    name: HTTP request
    network.protocol.version: "1.1"
    otel.kind: Server
    otel.name: GET
    server.address: example.com
    span.type: web
    url.path: /users/123
    url.scheme: http
    user_agent.original: ""
  spans: []
  target: "otel::tracing"
  timestamp: "[timestamp]"
- fields:
    message: close
    time.busy: "[duration]"
    time.idle: "[duration]"
  level: TRACE
  span:
    http.request.method: GET
    http.response.status_code: 200
    http.route: "/users/{id}"
    name: HTTP request
    network.protocol.version: "1.1"
    otel.kind: Server
    otel.name: "GET /users/{id}"
    server.address: example.com
    span.type: web
    url.path: /users/123
    url.scheme: http
    user_agent.original: ""
  spans: []
  target: "otel::tracing"
  timestamp: "[timestamp]"
