testing-tracing-opentelemetry/src/snapshots/testing_tracing_opentelemetry__grpc_status_code_on_close_for_ok.snap
---
source: testing-tracing-opentelemetry/src/lib.rs
expression: tracing_events
---
- fields:
    message: new
  level: INFO
  span:
    http.user_agent: ""
    name: grpc request
    otel.kind: server
    otel.name: /module.service/endpoint1
    rpc.method: endpoint1
    rpc.service: module.service
    rpc.system: grpc
    server.address: ""
    trace_id: "[trace_id:lg32]"
  spans: []
  target: "tonic_tracing_opentelemetry::middleware::trace_extractor"
  timestamp: "[timestamp]"
- fields:
    message: close
    time.busy: "[duration]"
    time.idle: "[duration]"
  level: INFO
  span:
    http.user_agent: ""
    name: grpc request
    otel.kind: server
    otel.name: /module.service/endpoint1
    otel.status_code: OK
    rpc.method: endpoint1
    rpc.service: module.service
    rpc.system: grpc
    server.address: ""
    trace_id: "[trace_id:lg32]"
  spans: []
  target: "tonic_tracing_opentelemetry::middleware::trace_extractor"
  timestamp: "[timestamp]"

