testing-tracing-opentelemetry/src/snapshots/testing_tracing_opentelemetry__grpc_status_code_on_close_for_ok_otel_spans.snap
---
source: testing-tracing-opentelemetry/src/lib.rs
expression: otel_spans
---
- trace_id: "[trace_id:lg32]"
  span_id: "[span_id:lg16]"
  trace_state: ""
  parent_span_id: "[span_id:lg0]"
  name: /module.service/endpoint1
  kind: SPAN_KIND_SERVER
  start_time_unix_nano: "[timestamp]"
  end_time_unix_nano: "[timestamp]"
  attributes:
    busy_ns: ignore
    code.filepath: ignore
    code.lineno: ignore
    code.namespace: "Some(AnyValue { value: Some(StringValue(\"tonic_tracing_opentelemetry::middleware::trace_extractor\")) })"
    http.user_agent: "Some(AnyValue { value: Some(StringValue(\"\")) })"
    idle_ns: ignore
    rpc.method: "Some(AnyValue { value: Some(StringValue(\"endpoint1\")) })"
    rpc.service: "Some(AnyValue { value: Some(StringValue(\"module.service\")) })"
    rpc.system: "Some(AnyValue { value: Some(StringValue(\"grpc\")) })"
    server.address: "Some(AnyValue { value: Some(StringValue(\"\")) })"
    thread.id: ignore
    thread.name: "Some(AnyValue { value: Some(StringValue(\"middleware::trace_extractor::tests::check_span_event_grpc::case_1\")) })"
    trace_id: ignore
  dropped_attributes_count: 0
  events: []
  dropped_events_count: 0
  links:
    - trace_id: "[trace_id:lg32]"
      span_id: "[span_id:lg16]"
      trace_state: ""
      attributes: {}
      dropped_attributes_count: 0
  dropped_links_count: 0
  status:
    message: ""
    code: STATUS_CODE_OK

