testing-tracing-opentelemetry/src/snapshots/testing_tracing_opentelemetry__status_code_on_close_for_error.snap
---
source: testing-tracing-opentelemetry/src/lib.rs
expression: tracing_events
---
- fields:
    message: new
  level: INFO
  span:
    http.client_ip: ""
    http.flavor: "1.1"
    http.host: ""
    http.method: GET
    http.route: /status/500
    http.scheme: HTTP
    http.target: /status/500
    http.user_agent: ""
    name: HTTP request
    otel.kind: server
    otel.name: GET /status/500
    trace_id: "[trace_id:lg32]"
  spans: []
  target: "otel::tracing"
  timestamp: "[timestamp]"
- fields:
    message: close
    time.busy: "[duration]"
    time.idle: "[duration]"
  level: INFO
  span:
    http.client_ip: ""
    http.flavor: "1.1"
    http.host: ""
    http.method: GET
    http.route: /status/500
    http.scheme: HTTP
    http.status_code: "500"
    http.target: /status/500
    http.user_agent: ""
    name: HTTP request
    otel.kind: server
    otel.name: GET /status/500
    otel.status_code: ERROR
    trace_id: "[trace_id:lg32]"
  spans: []
  target: "otel::tracing"
  timestamp: "[timestamp]"

